# django-otplink

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml  setup.py
.run/: Run_Debug testproject.run.xml
src/otplink/: __init__.py  admin.py  apps.py  functions.py  models.py  urls.py  views.py
src/otplink/migrations/: 0001_initial.py
testproject/settings/: asgi.py  settings.py  urls.py
testproject/testapp/: admin.py  models.py  urls.py
testproject/testapp/migrations/: 0001_initial.py
